Replace chosen by select2.  At first sight, it seems to work better on mobile devices. Fix some aesthetic issues in responsive mode.

--- a/assets/stylesheets/redmine_improved_searchbox.css
+++ b/assets/stylesheets/redmine_improved_searchbox.css
@@ -1,22 +1,25 @@
-#header a.chosen-single, #project_quick_jump_box_chosen { color:black; }
-
-.chosen-container {
+.select2-container {
     width: 200px !important;
 }
 
 @media screen and (max-width: 899px)
 {
-    .chosen-container {
-        /*font-size: 1.25em;*/
+    .select2-container {
+        font-size: 1.2em;
         position: absolute;
         top: 20px;
         left: 5px;
         float: left;
         width: calc(100% - 72px) !important;
         max-width: 100%;
+        /* #header has been given a z-index of 9999 and this one has to be above */
+        z-index: 10000;
     }
-}
-/* Tweak the offset to hide the other icon partially visible */
-.chosen-container-single .chosen-search input[type="text"] {
-    background: url('../images/chosen-sprite.png') no-repeat 100% -22px;
+
+    // General menu icon is not aligned properly without this
+   .flyout-menu .js-general-menu .icon {
+       margin-left: 8px;
+       padding-left: 20px;
+       background-position: 0% 65%;
+   }
 }
